# SocketIO-Simple-Chat

./: index.html  pyproject.toml  schemas.py  server.py
assets/: lariska.js
